fixed legal footer width and header spacing on splash page

--- a/css/layout_outer.css
+++ b/css/layout_outer.css
@@ -60,7 +60,7 @@ table {
 #footer_lower_inner > div#legal {
 	margin-top: 20px;
 	margin-left: 0;
-	width: 500px;
+	width: 550px;
 	float: left;
 	clear: left;
 }
@@ -156,10 +156,16 @@ ul.hmenu li a
     float: left;
 }
 
-#baobab {
-		position: absolute;
-		top: -200px;
-		right: -100px;
+#footer_outer img#baobab {
+	position: absolute;
+	top: -200px;
+	right: -100px;
+	display: none;
+}
+#footer_outer img#baskets {
+	position: absolute;
+	top: -190px;
+	right: -100px;
 }
 #user_image {
 	padding: 0;
@@ -167,6 +173,10 @@ ul.hmenu li a
 #user_image img {
 	width: 50px;
 	height: 50px;
+}
+
+#splash_container h1 {
+	margin-bottom: 10px;
 }
 
 #splash_footer div {
